--- a/html/home.html
+++ b/html/home.html
@@ -33,7 +33,7 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active" href="gioiThieu.html">Giới thiệu</a>
+                            <a class="nav-link active" href="index.html">Giới thiệu</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="danhSach.html">Danh sách sản phẩm</a>
