--- a/html/gioithieu.html
+++ b/html/gioithieu.html
@@ -84,7 +84,7 @@
         <ul>
             <li><strong>Họ và Tên:</strong> Lâm Gia Thịnh</li>
             <li><strong>Ngành học:</strong> Khoa học Máy tính</li>
-            <li><strong>Mục tiêu:</strong> Xây dựng một website thương mại điện tử đáp ứng nhu cầu mua sắm trực tuyến dễ dàng và tiện lợi.</li>
+            <li><strong>Mục tiêu:</strong> Xây dựng một website bán văn phòng phẩm đáp ứng nhu cầu mua sắm trực tuyến dễ dàng và tiện lợi.</li>
         </ul>
         
         <a href="home.html" class="btn btn-primary mt-3">Quay lại Trang Chủ</a>
