--- a/html/home.html
+++ b/html/home.html
@@ -38,6 +38,9 @@
                         <li class="nav-item">
                             <a class="nav-link" href="danhSach.html">Danh sách sản phẩm</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="map.html">Địa chỉ</a>
+                        </li>
                     </ul>
                 </div>
             </div>
