--- a/html/gioHang.html
+++ b/html/gioHang.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Giỏ Hàng</title>
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/index.css">
-    <script src="/js/jquery-3.7.1.min.js"></script>
-    <script src="/js/bootstrap.bundle.min.js"></script>
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/index.css">
+    <script src="../js/jquery-3.7.1.min.js"></script>
+    <script src="../js/bootstrap.bundle.min.js"></script>
+    <script src="../js/script.js"></script>
     <style>
         .card-img-top {
             object-fit: cover;
@@ -58,8 +59,8 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a href="home.html" class="nav-link">Trang chủ</a></li>
-                    <li class="nav-item"><a href="danhSach.html" class="nav-link">Danh sách sản phẩm</a></li>
+                    <li class="nav-item"><a href="../html/home.html" class="nav-link">Trang chủ</a></li>
+                    <li class="nav-item"><a href="../html/danhSach.html" class="nav-link">Danh sách sản phẩm</a></li>
                 </ul>
             </div>
         </div>
