--- a/html/gioithieu.html
+++ b/html/gioithieu.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Giới thiệu Website</title>
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/index.css">
-    <script src="/js/jquery-3.7.1.min.js"></script>
-    <script src="/js/bootstrap.bundle.min.js"></script>
-    <script src="/js/script.js"></script>
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/index.css">
+    <script src="../js/jquery-3.7.1.min.js"></script>
+    <script src="../js/bootstrap.bundle.min.js"></script>
+    <script src="../js/script.js"></script>
 
     <style>
         body {
@@ -87,7 +87,7 @@
             <li><strong>Mục tiêu:</strong> Xây dựng một website bán văn phòng phẩm đáp ứng nhu cầu mua sắm trực tuyến dễ dàng và tiện lợi.</li>
         </ul>
         
-        <a href="home.html" class="btn btn-primary mt-3">Quay lại Trang Chủ</a>
+        <a href="../html/home.html" class="btn btn-primary mt-3">Quay lại Trang Chủ</a>
     </div>
 
     <div class="footer">
