--- a/html/chiTietSP.html
+++ b/html/chiTietSP.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chi Tiết Sản Phẩm</title>
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/index.css">
-    <script src="/js/jquery-3.7.1.min.js"></script>
-    <script src="/js/bootstrap.min.js"></script>
-    <script src="/js/script.js"></script>
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/index.css">
+    <script src="../js/jquery-3.7.1.min.js"></script>
+    <script src="../js/bootstrap.bundle.min.js"></script>
+    <script src="../js/script.js"></script>
 
 </head>
 <body>
@@ -21,9 +21,9 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link" href="/html/home.html">Trang Chủ</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/html/danhSach.html">Danh Sách Sản Phẩm</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/html/gioiThieu.html">Liên Hệ</a></li>
+                    <li class="nav-item"><a class="nav-link" href="../html/home.html">Trang Chủ</a></li>
+                    <li class="nav-item"><a class="nav-link" href="../html/danhSach.html">Danh Sách Sản Phẩm</a></li>
+                    <li class="nav-item"><a class="nav-link" href="../html/gioiThieu.html">Liên Hệ</a></li>
                 </ul>
             </div>
         </div>
