--- a/html/dangNhap.html
+++ b/html/dangNhap.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Đăng Nhập</title>
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/index.css">
-    <script src="/js/jquery-3.7.1.min.js"></script>
-    <script src="/js/bootstrap.min.js"></script>
-    <script src="/js/script.js"></script>
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/index.css">
+    <script src="../js/jquery-3.7.1.min.js"></script>
+    <script src="../js/bootstrap.bundle.min.js"></script>
+    <script src="../js/script.js"></script>
 
     <script>
         localStorage.setItem("currentUser", JSON.stringify(user));
@@ -29,7 +29,7 @@
                 </div>
                 <button type="submit" class="btn btn-success w-100">Đăng Nhập</button>
                 <p id="loginMessage" class="text-danger text-center mt-2"></p>
-                <p class="text-center mt-3">Chưa có tài khoản? <a href="dangKyTV.html" id="showRegister">Đăng ký tại đây</a></p>
+                <p class="text-center mt-3">Chưa có tài khoản? <a href="../html/dangKyTV.html" id="showRegister">Đăng ký tại đây</a></p>
             </form>
         </div>
     </div>
