--- a/html/danhSach.html
+++ b/html/danhSach.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Danh sách sản phẩm</title>
-    <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/index.css">
-    <script src="/js/jquery-3.7.1.min.js"></script>
-    <script src="/js/bootstrap.min.js"></script>
-    <script src="/js/script.js"></script>
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/index.css">
+    <script src="../js/jquery-3.7.1.min.js"></script>
+    <script src="../js/bootstrap.bundle.min.js"></script>
+    <script src="../js/script.js"></script>
 </head>
 <body>
     <!-- Thanh điều hướng -->
@@ -20,7 +20,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a href="home.html" class="nav-link">Trang chủ</a></li>
+                    <li class="nav-item"><a href="../html/home.html" class="nav-link">Trang chủ</a></li>
                     <li class="nav-item"><a class="nav-link active category-link" data-category="all" href="#">Tất cả</a></li>
                     <li class="nav-item"><a class="nav-link category-link" data-category="vanphong" href="#">Văn Phòng</a></li>
                     <li class="nav-item"><a class="nav-link category-link" data-category="hocduong" href="#">Học Đường</a></li>
@@ -46,7 +46,7 @@
                 </div>
                 <div class="modal-footer">
                     <button class="btn btn-success" onclick="addToCartFromModal()">Thêm vào giỏ</button>
-                    <a href="review.html" class="btn btn-outline-primary mt-2">Xem đánh giá</a>
+                    <a href="../html/review.html" class="btn btn-outline-primary mt-2">Xem đánh giá</a>
                     <button class="btn btn-secondary" data-bs-dismiss="modal">Đóng</button>
                 </div>
             </div>
@@ -60,29 +60,29 @@
     <script>
         const products = [
 // Văn phòng
-{ name: "Bấm Kim", image: "/img/bamKim.png", category: "vanphong", price: 25000, quantity: 50, bestSeller: true},
-{ name: "Bút Long Bảng", image: "/img/butLongBang.png", category: "vanphong", price: 22000, quantity: 30, bestSeller: false },
-{ name: "Combo 12 Bút", image: "/img/combo12But.png", category: "vanphong", price: 99000, quantity: 20, bestSeller: true },
-{ name: "Máy Tính Văn Phòng", image: "/img/mayTinhVanPhong.png", category: "vanphong", price: 350000, quantity: 15, bestSeller: true },
-{ name: "Túi Giấy", image: "/img/tuiGiay.png", category: "vanphong", price: 8000, quantity: 200, bestSeller: false },
-{ name: "Nhà Lãnh Đạo", image: "/img/nhaLanhDao.png", category: "vanphong", price: 120000, quantity: 10, bestSeller: false },
-{ name: "Thước Trong", image: "/img/thuocTrong.png", category: "vanphong", price: 15000, quantity: 40, bestSeller: false },
-{ name: "Khẩu trang xanh", image: "/img/butlong1.png", category: "vanphong", price: 20000, quantity: 80, bestSeller: false },
-{ name: "Khẩu trang vip", image: "/img/butlong2.png", category: "vanphong", price: 400000, quantity: 80, bestSeller: false },
-{ name: "Khẩu trang diệt khuẩn", image: "/img/butlong3.png", category: "vanphong", price: 20000, quantity: 80, bestSeller: false },
-{ name: "Bút lông copypaper", image: "/img/butlong4.png", category: "vanphong", price: 340000, quantity: 80, bestSeller: false },
+{ name: "Bấm Kim", image: "../img/bamKim.png", category: "vanphong", price: 25000, quantity: 50, bestSeller: true},
+{ name: "Bút Long Bảng", image: "../img/butLongBang.png", category: "vanphong", price: 22000, quantity: 30, bestSeller: false },
+{ name: "Combo 12 Bút", image: "../img/combo12But.png", category: "vanphong", price: 99000, quantity: 20, bestSeller: true },
+{ name: "Máy Tính Văn Phòng", image: "../img/mayTinhVanPhong.png", category: "vanphong", price: 350000, quantity: 15, bestSeller: true },
+{ name: "Túi Giấy", image: "../img/tuiGiay.png", category: "vanphong", price: 8000, quantity: 200, bestSeller: false },
+{ name: "Nhà Lãnh Đạo", image: "../img/nhaLanhDao.png", category: "vanphong", price: 120000, quantity: 10, bestSeller: false },
+{ name: "Thước Trong", image: "../img/thuocTrong.png", category: "vanphong", price: 15000, quantity: 40, bestSeller: false },
+{ name: "Khẩu trang xanh", image: "../img/butlong1.png", category: "vanphong", price: 20000, quantity: 80, bestSeller: false },
+{ name: "Khẩu trang vip", image: "../img/butlong2.png", category: "vanphong", price: 400000, quantity: 80, bestSeller: false },
+{ name: "Khẩu trang diệt khuẩn", image: "../img/butlong3.png", category: "vanphong", price: 20000, quantity: 80, bestSeller: false },
+{ name: "Bút lông copypaper", image: "../img/butlong4.png", category: "vanphong", price: 340000, quantity: 80, bestSeller: false },
 
 // Học đường
-{ name: "Bộ 2 Bút", image: "/img/bo2But.png", category: "hocduong", price: 15000, quantity: 80, bestSeller: true },
-{ name: "Bút 1", image: "/img/but1.png", category: "hocduong", price: 5000, quantity: 100, bestSeller: false},
-{ name: "Bút 2", image: "/img/but2.png", category: "hocduong", price: 7000, quantity: 90, bestSeller: true },
-{ name: "Bút Gel", image: "/img/butGel.png", category: "hocduong", price: 12000, quantity: 60, bestSeller: true },
-{ name: "Ruột Bút Bi", image: "/img/ruotbutbi.png", category: "hocduong", price: 4000, quantity: 150, bestSeller: false },
-{ name: "Tập Học Sinh", image: "/img/tapHocSinh.png", category: "hocduong", price: 18000, quantity: 90, bestSeller: true },
-{ name: "Bút mực con gấu", image: "/img/gdt1.png", category: "hocduong", price: 20000, quantity: 90, bestSeller: true },
-{ name: "Bút mực con cáo", image: "/img/gdt2.png", category: "hocduong", price: 20000, quantity: 90, bestSeller: true },
-{ name: "Bút mực 2 màu", image: "/img/gdt3.png", category: "hocduong", price: 20000, quantity: 90, bestSeller: true },
-{ name: "Bút mực chuyên dụng", image: "/img/gdt4.png", category: "hocduong", price: 20000, quantity: 90, bestSeller: true },
+{ name: "Bộ 2 Bút", image: "../img/bo2But.png", category: "hocduong", price: 15000, quantity: 80, bestSeller: true },
+{ name: "Bút 1", image: "../img/but1.png", category: "hocduong", price: 5000, quantity: 100, bestSeller: false},
+{ name: "Bút 2", image: "../img/but2.png", category: "hocduong", price: 7000, quantity: 90, bestSeller: true },
+{ name: "Bút Gel", image: "../img/butGel.png", category: "hocduong", price: 12000, quantity: 60, bestSeller: true },
+{ name: "Ruột Bút Bi", image: "../img/ruotbutbi.png", category: "hocduong", price: 4000, quantity: 150, bestSeller: false },
+{ name: "Tập Học Sinh", image: "../img/tapHocSinh.png", category: "hocduong", price: 18000, quantity: 90, bestSeller: true },
+{ name: "Bút mực con gấu", image: "../img/gdt1.png", category: "hocduong", price: 20000, quantity: 90, bestSeller: true },
+{ name: "Bút mực con cáo", image: "../img/gdt2.png", category: "hocduong", price: 20000, quantity: 90, bestSeller: true },
+{ name: "Bút mực 2 màu", image: "../img/gdt3.png", category: "hocduong", price: 20000, quantity: 90, bestSeller: true },
+{ name: "Bút mực chuyên dụng", image: "../img/gdt4.png", category: "hocduong", price: 20000, quantity: 90, bestSeller: true },
 
 
 
@@ -90,13 +90,13 @@
 
 
 // Đồ chơi
-{ name: "Bút Đa Long", image: "/img/butDaLong.png", category: "dochoi", price: 27000, quantity: 45, bestSeller: false },
-{ name: "Combo Bé Vui", image: "/img/comboBeVui.png", category: "dochoi", price: 59000, quantity: 30, bestSeller: true },
-{ name: "Bút Long Nhiều Màu", image: "/img/butLongNhieuMau.png", category: "dochoi", price: 30000, quantity: 50, bestSeller: true },
-{ name: "Hộp Bút Lông Màu", image: "/img/hopButLongMau.png", category: "dochoi", price: 45000, quantity: 35, bestSeller: false },
-{ name: "Màu Rửa Được", image: "/img/mauRuaDuoc.png", category: "dochoi", price: 55000, quantity: 25, bestSeller: true },
-{ name: "Combo 20 Bút", image: "/img/combo20But.png", category: "dochoi", price: 120000, quantity: 20, bestSeller: false },
-{ name: "Combo Toán Học", image: "/img/comboToanHoc.png", category: "dochoi", price: 90000, quantity: 40, bestSeller: false }
+{ name: "Bút Đa Long", image: "../img/butDaLong.png", category: "dochoi", price: 27000, quantity: 45, bestSeller: false },
+{ name: "Combo Bé Vui", image: "../img/comboBeVui.png", category: "dochoi", price: 59000, quantity: 30, bestSeller: true },
+{ name: "Bút Long Nhiều Màu", image: "../img/butLongNhieuMau.png", category: "dochoi", price: 30000, quantity: 50, bestSeller: true },
+{ name: "Hộp Bút Lông Màu", image: "../img/hopButLongMau.png", category: "dochoi", price: 45000, quantity: 35, bestSeller: false },
+{ name: "Màu Rửa Được", image: "../img/mauRuaDuoc.png", category: "dochoi", price: 55000, quantity: 25, bestSeller: true },
+{ name: "Combo 20 Bút", image: "../img/combo20But.png", category: "dochoi", price: 120000, quantity: 20, bestSeller: false },
+{ name: "Combo Toán Học", image: "../img/comboToanHoc.png", category: "dochoi", price: 90000, quantity: 40, bestSeller: false }
 ];
 
         function renderProducts(category = "all") {
