--- a/html/map.html
+++ b/html/map.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8">
   <title>Liên hệ với chúng tôi</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/css/index.css">
-  <script src="/js/jquery-3.7.1.min.js"></script>
-  <script src="/js/bootstrap.min.js"></script>
-  <script src="/js/script.js"></script>
+  <link rel="stylesheet" href="../css/bootstrap.min.css">
+  <link rel="stylesheet" href="../css/index.css">
+  <script src="../js/jquery-3.7.1.min.js"></script>
+  <script src="../js/bootstrap.min.js"></script>
+  <script src="../js/script.js"></script>
   <style>
     body {
       background-color: #f8f9fa;
