--- a/html/review.html
+++ b/html/review.html
@@ -4,11 +4,11 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Đánh giá sản phẩm</title>
-  <link rel="stylesheet" href="/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/index.css">
-    <script src="/js/jquery-3.7.1.min.js"></script>
-    <script src="/js/bootstrap.min.js"></script>
-    <script src="/js/script.js"></script>
+  <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <link rel="stylesheet" href="../css/index.css">
+    <script src="../js/jquery-3.7.1.min.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
+    <script src="../js/script.js"></script>
   <style>
     body {
       background-color: #f8f9fa;
@@ -75,7 +75,7 @@
       </div>
 
       <button type="submit" class="btn btn-primary">Gửi đánh giá</button>
-      <a href="home.html" class="btn btn-secondary ms-2">Về trang chủ</a>
+      <a href="../html/home.html" class="btn btn-secondary ms-2">Về trang chủ</a>
     </form>
 
     <h3 class="mb-4">Đánh giá gần đây</h3>
