--- a/html/home.html
+++ b/html/home.html
@@ -39,7 +39,10 @@
                             <a class="nav-link" href="../html/danhSach.html">Danh sách sản phẩm</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../html/map.html">Địa chỉ</a>
+                            <a class="nav-link" href="../html/sitemap.html">Site Map</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="../html/cauHoiThuongGap.html">Câu hỏi thường gặp</a>
                         </li>
                     </ul>
                 </div>
