--- a/html/sitemap.html
+++ b/html/sitemap.html
@@ -75,7 +75,7 @@
         <div class="card-body">
             <ul>
                 <li><a href="home.html">Trang chủ</a></li>
-                <li><a href="gioiThieu.html">Giới thiệu</a></li>
+                <li><a href="gioithieu.html">Giới thiệu</a></li>
                 <li><a href="quangCao.html">Quảng cáo</a></li>
                 <li><a href="siteMap.html">Sitemap</a></li> <!-- Liên kết đến trang Sitemap -->
             </ul>
