--- a/html/sitemap.html
+++ b/html/sitemap.html
@@ -77,10 +77,10 @@
         </div>
         <div class="card-body">
             <ul>
-                <li><a href="home.html">Trang chủ</a></li>
-                <li><a href="gioithieu.html">Giới thiệu</a></li>
-                <li><a href="quangCao.html">Quảng cáo</a></li>
-                <li><a href="siteMap.html">Sitemap</a></li> <!-- Liên kết đến trang Sitemap -->
+                <li><a href="../html/home.html">Trang chủ</a></li>
+                <li><a href="../html/gioithieu.html">Giới thiệu</a></li>
+                <li><a href="../html/quangCao.html">Quảng cáo</a></li>
+                <li><a href="../html/siteMap.html">Sitemap</a></li> <!-- Liên kết đến trang Sitemap -->
             </ul>
         </div>
     </div>
@@ -92,9 +92,9 @@
         </div>
         <div class="card-body">
             <ul>
-                <li><a href="chiTietSP.html">Chi tiết sản phẩm</a></li>
-                <li><a href="danhSach.html">Danh sách sản phẩm</a></li>
-                <li><a href="gioHang.html">Giỏ hàng</a></li>
+                <li><a href="../html/chiTietSP.html">Chi tiết sản phẩm</a></li>
+                <li><a href="../html/danhSach.html">Danh sách sản phẩm</a></li>
+                <li><a href="../html/gioHang.html">Giỏ hàng</a></li>
             </ul>
         </div>
     </div>
@@ -106,8 +106,8 @@
         </div>
         <div class="card-body">
             <ul>
-                <li><a href="dangKyTV.html">Đăng ký thành viên</a></li>
-                <li><a href="dangNhap.html">Đăng nhập</a></li>
+                <li><a href="../html/dangKyTV.html">Đăng ký thành viên</a></li>
+                <li><a href="../html/dangNhap.html">Đăng nhập</a></li>
             </ul>
         </div>
     </div>
@@ -119,14 +119,12 @@
         </div>
         <div class="card-body">
             <ul>
-                <li><a href="cauHoiThuongGap.html">Câu hỏi thường gặp</a></li> <!-- Liên kết đến trang Câu hỏi thường gặp -->
-                <li><a href="review.html">Đánh giá</a></li>
+                <li><a href="../html/cauHoiThuongGap.html">Câu hỏi thường gặp</a></li> <!-- Liên kết đến trang Câu hỏi thường gặp -->
+                <li><a href="../html/review.html">Đánh giá</a></li>
             </ul>
         </div>
     </div>
 </div>
 
-<!-- Bootstrap JS -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
