--- a/html/gioithieu.html
+++ b/html/gioithieu.html
@@ -78,13 +78,13 @@
 <body class="d-flex justify-content-center align-items-center vh-100">
     <div class="container">
         <h2>Giới Thiệu Website</h2>
-        <p>Chào mừng bạn đến với trang web bán văn phòng phẩm trực tuyến của chúng tôi. Website cung cấp các sản phẩm văn phòng phẩm chất lượng cao, đa dạng mẫu mã, phục vụ nhu cầu học tập và làm việc của bạn.</p>
+        <p>Chào mừng bạn đến với trang web bán thực phẩm khô trực tuyến của chúng tôi. Website cung cấp các sản phẩm văn phòng phẩm chất lượng cao, đa dạng mẫu mã, phục vụ nhu cầu học tập và làm việc của bạn.</p>
 
         <h3 class="mt-4">Thông Tin Thành Viên Thực Hiện</h3>
         <ul>
             <li><strong>Họ và Tên:</strong> Lâm Gia Thịnh</li>
             <li><strong>Ngành học:</strong> Khoa học Máy tính</li>
-            <li><strong>Mục tiêu:</strong> Xây dựng một website bán văn phòng phẩm đáp ứng nhu cầu mua sắm trực tuyến dễ dàng và tiện lợi.</li>
+            <li><strong>Mục tiêu:</strong> Xây dựng một website bán thực phẩm khô.</li>
         </ul>
         
         <a href="../html/home.html" class="btn btn-primary mt-3">Quay lại Trang Chủ</a>
