--- a/html/home.html
+++ b/html/home.html
@@ -26,7 +26,7 @@
     <div class="container-fluid">
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
             <div class="container">
-                <a class="navbar-brand" href="#">Cửa Hàng Văn Phòng Phẩm</a>
+                <a class="navbar-brand" href="#">Cửa Hàng Vật Phẩm Khô</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                     <span class="navbar-toggler-icon"></span>
                 </button>
