--- a/html/cauHoiThuongGap.html
+++ b/html/cauHoiThuongGap.html
@@ -75,7 +75,7 @@
             <div class="card-header" id="headingOne">
                 <h5 class="mb-0">
                     <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                        1. Làm thế nào để đặt mua văn phòng phẩm?
+                        1. Làm thế nào để đặt mua đồ khô?
                     </button>
                 </h5>
             </div>
