--- a/html/cauHoiThuongGap.html
+++ b/html/cauHoiThuongGap.html
@@ -64,7 +64,7 @@
 <body>
 
 <header>
-    <a href="home.html"><h1>Văn Phòng Phẩm - Các Câu Hỏi Thường Gặp</h1></a>
+    <a href="home.html"><h1>Đồ khô - Các Câu Hỏi Thường Gặp</h1></a>
     <a href="home.html" class="btn btn-light mt-3">Về Trang Chủ</a> <!-- Nút trang chủ -->
 </header>
 
