--- a/html/home.html
+++ b/html/home.html
@@ -51,7 +51,7 @@
     
         <div class="row align-items-center py-3 custom-header">
             <div class="col-lg-3 text-center text-lg-start mb-3 mb-lg-0">
-                <img src="../img/logo.png" alt="Logo" class="img-fluid" style="max-width: 200px;">
+                <img src="../img/logo-1.png" alt="Logo" class="img-fluid" style="height: 60px; width: auto;">
             </div>
         
             <div class="col-lg-5 position-relative mb-3 mb-lg-0">
