--- a/html/home.html
+++ b/html/home.html
@@ -88,10 +88,10 @@
         
         <div class="row qc-row">
             <div class="col-lg-6">
-                <img src="../img/quancao1.png" alt="Quảng cáo 1" class="qc-img">
+                <img src="../img/duakho.png" alt="Quảng cáo 1" class="qc-img">
             </div>
             <div class="col-lg-6">
-                <img src="../img/quangcao2.png" alt="Quảng cáo 2" class="qc-img">
+                <img src="../img/ngucoc.png" alt="Quảng cáo 2" class="qc-img">
             </div>
         </div>
         
