--- a/html/danhSach.html
+++ b/html/danhSach.html
@@ -62,6 +62,11 @@
         
         const products = [
 // Văn phòng
+{ name: "Hũ Hành", image: "../img/anhmoi2.png", category: "vanphong", price: 50000, quantity: 50, bestSeller: true},
+{ name: "Hokori", image: "../img/anhmoi1.png", category: "vanphong", price: 30000, quantity: 50, bestSeller: true},
+{ name: "Trái cây khô", image: "../img/anhmoi3.png", category: "vanphong", price: 100000, quantity: 50, bestSeller: true},
+{ name: "Các loại đồ khô", image: "../img/anhmoi4.png", category: "vanphong", price: 550000, quantity: 50, bestSeller: true},
+{ name: "Các loại đồ khô", image: "../img/anhmoi5.png", category: "vanphong", price: 60000, quantity: 50, bestSeller: true},
 { name: "Bấm Kim", image: "../img/bamKim.png", category: "vanphong", price: 25000, quantity: 50, bestSeller: true},
 { name: "Bút Long Bảng", image: "../img/butLongBang.png", category: "vanphong", price: 22000, quantity: 30, bestSeller: false },
 { name: "Combo 12 Bút", image: "../img/combo12But.png", category: "vanphong", price: 99000, quantity: 20, bestSeller: true },
@@ -75,6 +80,10 @@
 { name: "Bút lông copypaper", image: "../img/butlong4.png", category: "vanphong", price: 340000, quantity: 80, bestSeller: false },
 
 // Học đường
+{ name: "Bộ 3 hũ khô", image: "../img/anhmoi6.png", category: "hocduong", price: 34000, quantity: 80, bestSeller: true },
+{ name: "Khô gà", image: "../img/anhmoi7.png", category: "hocduong", price: 34000, quantity: 80, bestSeller: true },
+{ name: "Compo 20 loại", image: "../img/anhmoi8.png", category: "hocduong", price: 34000, quantity: 80, bestSeller: true },
+
 { name: "Bộ 2 Bút", image: "../img/bo2But.png", category: "hocduong", price: 15000, quantity: 80, bestSeller: true },
 { name: "Bút 1", image: "../img/but1.png", category: "hocduong", price: 5000, quantity: 100, bestSeller: false},
 { name: "Bút 2", image: "../img/but2.png", category: "hocduong", price: 7000, quantity: 90, bestSeller: true },
