--- a/html/gioithieu.html
+++ b/html/gioithieu.html
@@ -78,7 +78,7 @@
 <body class="d-flex justify-content-center align-items-center vh-100">
     <div class="container">
         <h2>Giới Thiệu Website</h2>
-        <p>Chào mừng bạn đến với trang web bán thực phẩm khô trực tuyến của chúng tôi. Website cung cấp các sản phẩm văn phòng phẩm chất lượng cao, đa dạng mẫu mã, phục vụ nhu cầu học tập và làm việc của bạn.</p>
+        <p>Chào mừng bạn đến với trang web bán thực phẩm khô trực tuyến của chúng tôi. Website cung cấp các sản phẩm đồ khô chất lượng cao, đa dạng mẫu mã, phục vụ nhu cầu học tập và làm việc của bạn.</p>
 
         <h3 class="mt-4">Thông Tin Thành Viên Thực Hiện</h3>
         <ul>
