--- a/html/home.html
+++ b/html/home.html
@@ -143,29 +143,29 @@
         <div class="row" id="but">
             <div class="col-lg-3">
                 <a href="../html/danhSach.html">
-                    <img src="../img/but1.png" alt="Bút cao cấp thiên long - bizer" width="300px" height="300px">
-                    <p class="text-danger">Bút cao cấp thiên long - bizer</p>
-                    <b class="text-primary">4.320.000đ</b>
+                    <img src="../img/anhmoi1.png" alt="Bút cao cấp thiên long - bizer" width="300px" height="300px">
+                    <p class="text-danger">Hộp đồ khô</p>
+                    <b class="text-primary">50.000đ</b>
                 </a>
             </div>
             <div class="col-lg-3">
                 <a href="../html/danhSach.html">
-                    <img src="../img/but2.png" alt="Bút cao cấp Parker" width="300px" height="300px">
-                    <p class="text-danger">Bút cao cấp Parker</p>
-                    <b class="text-primary">3.320.000đ</b>
+                    <img src="../img/anhmoi2.png" alt="Bút cao cấp Parker" width="300px" height="300px">
+                    <p class="text-danger">Bộ ba hộp đồ khô</p>
+                    <b class="text-primary">150.000đ</b>
                 </a>
             </div>
             <div class="col-lg-3">
                 <a href="../html/danhSach.html">
-                    <img src="../img/but3.png" alt="Bút cao cấp Son-X" width="300px" height="300px">
-                    <p class="text-danger">Bút cao cấp Son-X</p>
-                    <b class="text-primary">2.320.000đ</b>
+                    <img src="../img/anhmoi3.png" alt="Bút cao cấp Son-X" width="300px" height="300px">
+                    <p class="text-danger">Trái cây khô</p>
+                    <b class="text-primary">320.000đ</b>
                 </a>
             </div>
             <div class="col-lg-3">
                 <a href="../html/danhSach.html">
-                    <img src="../img/but4.png" alt="Bút cao cấp Son-Y" width="300px" height="300px">
-                    <p class="text-danger">Bút cao cấp Son-Y</p>
+                    <img src="../img/anhmoi4.png" alt="Bút cao cấp Son-Y" width="300px" height="300px">
+                    <p class="text-danger">Đồ khô trái tim</p>
                     <b class="text-primary">2.400.000đ</b>
                 </a>
             </div>
@@ -173,13 +173,13 @@
 
         <div class="row">
             <div class="col-lg-12">
-                <img src="../img/giayin.png" alt="Giấy in" width="100%" height="300px">
+                <img src="../img/anhmoi9.png" alt="Giấy in" width="100%" height="300px">
             </div>
         </div>
         <div class="row" id="but">
             <div class="col-lg-3">
                 <a href="../html/danhSach.html">
-                    <img src="../img/butlong1.png" alt="Bút lông thiên long - bizer" width="300px" height="300px">
+                    <img src="../img/anhmoi6.png" alt="Bút lông thiên long - bizer" width="300px" height="300px">
                 <p class="text-danger">Bút lông thiên long - bizer</p>
                 <b class="text-primary">320.000đ</b>
                 </a>
@@ -187,7 +187,7 @@
             </div>
             <div class="col-lg-3">
                 <a href="../html/danhSach.html">
-                    <img src="../img/butlong2.png" alt="Bút lông Parker" width="300px" height="300px">
+                    <img src="../img/anhmoi7.png" alt="Bút lông Parker" width="300px" height="300px">
                     <p class="text-danger">Bút lông Parker</p>
                     <b class="text-primary">4.320.000đ</b>
                 </a>
@@ -195,7 +195,7 @@
             </div>
             <div class="col-lg-3">
                 <a href="../html/danhSach.html">
-                    <img src="../img/butlong3.png" alt="Bút lông Son-X" width="300px" height="300px">
+                    <img src="../img/anhmoi8.png" alt="Bút lông Son-X" width="300px" height="300px">
                 <p class="text-danger">Bút lông Son-X</p>
                 <b class="text-primary">250.000đ</b>
                 </a>
@@ -203,7 +203,7 @@
             </div>
             <div class="col-lg-3">
                 <a href="../html/danhSach.html">
-                    <img src="../img/butlong4.png" alt="Bút lông Son-Y" width="300px" height="300px">
+                    <img src="../img/anhmoi5.png" alt="Bút lông Son-Y" width="300px" height="300px">
                     <p class="text-danger">Bút lông Son-Y</p>
                     <b class="text-primary">220.000đ</b>
                 </a>
