--- a/html/dangKyTV.html
+++ b/html/dangKyTV.html
@@ -61,7 +61,7 @@ $(document).ready(function () {
         let confirmPassword = $("#regConfirmPassword").val().trim();
 
         // Kiểm tra họ tên
-        let namePattern = /^([A-ZÀ-Ỵ][a-zà-ỹ]+\s){1,}[A-ZÀ-Ỵ][a-zà-ỹ]+$/;
+        let namePattern = /^([A-ZÀ-Ỵ]{1}[a-zà-ỹ]+)(\s[A-ZÀ-Ỵ]{1}[a-zà-ỹ]*)+$/;
 if (!namePattern.test(fullName)) {
     $("#regMessage").text("Họ tên phải có ít nhất 2 từ, mỗi từ bắt đầu bằng chữ hoa.");
     return;
